2004-10-31  Roger While <simrw@sim-basis.de>

	* fileio.h : For I/O exceptions, has_status flag and slight
	  rearrangement of fields in cob_file structure.

2004-10-30  Roger While <simrw@sim-basis.de>

	* call.c, common.c, move.c : Replace back-tick "`" with 
	  quote "'"
	* move.c : Fix to handle PIC ***B***B**9.
	* byteswap.h : Always generate optimum code, not just with -O
	* fileio.c : Tidy up file error messages.
	  In the ENOENT return for OPEN OUTPUT/EXTEND, return status 30.
	  Note this will not have any effect until we activate error
	  handling for the OPEN. (Coming up soon)

2004-09-17  Keisuke Nishida  <knishida@open-cobol.org>

	* numeric.h (COB_STORE_TRUNC_ON_OVERFLOW): Define as 0x04, not 0x02.
	(Thanks to Roger While)
	
2004-07-06  Keisuke Nishida  <knishida@open-cobol.org>

	* numeric.h (COB_STORE_ROUND, COB_STORE_KEEP_ON_OVERFLOW) 
	(COB_STORE_TRUNC_ON_OVERFLOW): New macros.
	* numeric.h, numeric.c (cob_decimal_get_display) 
	(cob_decimal_get_binary, cob_decimal_get_field, cob_add, cob_sub)
	(cob_div_quotient, cob_div_remainder): New arg `opt'.
	* numeric.c (cob_decimal_get_field_round): Removed.
	Integrated into `cob_decimal_get_field'.
	(cob_display_add_int): Renamed from cob_add_int_to_display.
	(cob_add_round, cob_sub_round): Removed.

2004-07-05  Keisuke Nishida  <knishida@open-cobol.org>

	* fileio.c (sort_read): Set field size for varying records.
	(Thanks to Roger While!)

2004-06-12  Keisuke Nishida  <knishida@open-cobol.org>

	* termio.c (display): Display full digits of binary item
	when pretty-display is off, not when binary-truncate is off.

2004-05-21  Keisuke Nishida  <knishida@open-cobol.org>

	* move.c (cob_binary_get_int64): Reimplemented using memcpy.
	(cob_binary_get_int): Call cob_binary_get_int64.
	(cob_binary_set_int): Call cob_binary_set_int64.

2004-05-16  Keisuke Nishida  <knishida@open-cobol.org>

	* common.c (cob_cmp): Compare non-display numeric and alphanumeric
	correctly.
